syntax = "proto3";

package subpub;

option go_package="../";

import "google/protobuf/empty.proto";

service SubPub{
    // Подписка (сервер отправляет потой событий)
    rpc Subscribe(SubscribeRequest) returns (stream Event);
    // Публикация (классический запрос-ответ)
    rpc Publish(PublishRequest) returns (google.protobuf.Empty);
}

// Сообщение запроса для подписки на события 
message SubscribeRequest{
    string key = 1;
}

// Сообщение запроса для публикации события
message PublishRequest{
    string key = 1;
    string data = 2;
}

// Сообщение события, отправляемое подписчикам 
message Event {
    string data = 1;
}